# AdventOfCode2024

./: .gitignore  README.md
.devcontainer/: Dockerfile  devcontainer.json
src/: aoc2024.opam  dune-project
src/lib/: day01.ml  day02.ml  day03.ml  day04.ml  day05.ml  day06.ml  day07.ml  day08.ml  day09.ml  day10.ml  day11.ml  day12.ml  day13.ml  day14.ml  day15.ml  day16.ml  dune
src/lib/utils/: fun.ml  int.ml  list.ml  map.ml  matrix.ml  tuple.ml
